# chat-embed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  thread-embed-project-plan.md
data/eval/: baseline_results.json  finetuned_results.json  openai_results.json
scripts/: build_eval.py  build_pairs.py  download_data.py  download_discord_unveiled.py  evaluate.py  export_model.py  preprocess_data.py  train.py
src/thread_embed/: __init__.py
src/thread_embed/data/: downloaders.py  pair_builders.py  preprocessors.py  schemas.py
src/thread_embed/eval/: baselines.py  benchmark.py  metrics.py
src/thread_embed/training/: config.py  train.py
src/thread_embed/utils/: tokenization.py
tests/: test_eval.py  test_pair_builders.py  test_preprocessors.py
