[project]
name = "thread-embed"
version = "0.1.0"
description = "Chat-native embedding model for threaded multi-turn retrieval"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "datasets>=2.19",
    "pydantic>=2.0",
    "transformers>=4.40",
    "torch>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "tqdm",
    "rich",
    "click",
    "accelerate>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "seaborn",
]
eval = [
    "rank-bm25",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thread_embed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
